--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/mail": "^7.0.0",
     "@adonisjs/validator": "^5.0.6",
+    "@adonisjs/view": "^5.0.2",
     "mysql": "^2.18.1"
   },
   "devDependencies": {},
